--- a/ScrabbleWeb/Client/ScrabbleWeb.Client.csproj
+++ b/ScrabbleWeb/Client/ScrabbleWeb.Client.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ScrabbleGame\ScrabbleGame.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
 
