Refactor so that the client only has access to the data/code that it needs, including a DTO for the API

--- a/ScrabbleGame/ScrabbleGame.csproj
+++ b/ScrabbleGame/ScrabbleGame.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ScrabbleData\ScrabbleData.csproj" />
+    <ProjectReference Include="..\ScrabbleMoveChecker\ScrabbleMoveChecker.csproj" />
   </ItemGroup>
 
   <ItemGroup>
