--- a/ScrabbleWeb/Server/ScrabbleWeb.Server.csproj
+++ b/ScrabbleWeb/Server/ScrabbleWeb.Server.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\ScrabbleData\ScrabbleData.csproj" />
     <ProjectReference Include="..\Client\ScrabbleWeb.Client.csproj" />
+    <ProjectReference Include="..\Shared\ScrabbleWeb.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
