Add check constraint to the board. (Requires drop+re-create of database - SQLite doesn't support adding check constraints)

--- a/ScrabbleWeb/Server/ScrabbleWeb.Server.csproj
+++ b/ScrabbleWeb/Server/ScrabbleWeb.Server.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\ScrabbleData\ScrabbleData.csproj" />
+    <ProjectReference Include="..\..\ScrabbleGame\ScrabbleGame.csproj" />
     <ProjectReference Include="..\Client\ScrabbleWeb.Client.csproj" />
     <ProjectReference Include="..\Shared\ScrabbleWeb.Shared.csproj" />
   </ItemGroup>
