Add basic gameplay features including drag-drop tiles and play a move

--- a/ScrabbleWeb/Server/ScrabbleWeb.Server.csproj
+++ b/ScrabbleWeb/Server/ScrabbleWeb.Server.csproj
@@ -26,4 +26,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="SOWPODS.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
