--- a/ScrabbleWeb/Server/appsettings.json
+++ b/ScrabbleWeb/Server/appsettings.json
@@ -14,6 +14,9 @@
       "ScrabbleWeb.Client": {
         "Profile": "IdentityServerSPA"
       }
+    },
+    "Key": {
+      "Type": "Development"
     }
   },
 "AllowedHosts": "*"
