Refactoring to enable proper passing of game data to client

--- a/ScrabbleWeb/Server/appsettings.json
+++ b/ScrabbleWeb/Server/appsettings.json
@@ -3,11 +3,12 @@
     "DefaultConnection": "Data Source=scrabble.db"
   },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
+      //"Microsoft.EntityFrameworkCore.Database.Command":  "Information",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
+    }
     },
   "IdentityServer": {
     "Clients": {
