--- a/ScrabbleWeb/Server/ScrabbleWeb.Server.csproj
+++ b/ScrabbleWeb/Server/ScrabbleWeb.Server.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200708104945_AddLastMoveTiles.cs" />
+    <Compile Remove="Migrations\20200708104945_AddLastMoveTiles.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="3.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
