--- a/ScrabbleGame/ScrabbleGame.csproj
+++ b/ScrabbleGame/ScrabbleGame.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ScrabbleData\ScrabbleData.csproj" />
-    <ProjectReference Include="..\ScrabbleMoveChecker\ScrabbleMoveChecker.csproj" />
+    <ProjectReference Include="..\ScrabbleBase\ScrabbleBase.csproj" />
   </ItemGroup>
 
 </Project>
