--- a/ScrabbleWeb/Client/ScrabbleWeb.Client.csproj
+++ b/ScrabbleWeb/Client/ScrabbleWeb.Client.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ScrabbleMoveChecker\ScrabbleMoveChecker.csproj" />
+    <ProjectReference Include="..\..\ScrabbleBase\ScrabbleBase.csproj" />
     <ProjectReference Include="..\Shared\ScrabbleWeb.Shared.csproj" />
   </ItemGroup>
 
